[PURPLE-147] sonarcloud 이슈 해결